# cmake-cpp-modules-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/hello-app/: CMakeLists.txt
src/: hello_world.cppm  main.cpp
